--- a/StudyCpp/ArrayPointer/ArrayPointer.vcxproj
+++ b/StudyCpp/ArrayPointer/ArrayPointer.vcxproj
@@ -148,7 +148,10 @@
     <ClCompile Include="ArrayPointer3.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="ArrayPointer4.cpp" />
+    <ClCompile Include="ArrayPointer4.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="ArrayPointer5.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
