--- a/StudyCpp/ArrayPointer/ArrayPointer.vcxproj.filters
+++ b/StudyCpp/ArrayPointer/ArrayPointer.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="ArrayPointer4.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ArrayPointer5.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
